[package]
name = "playing-cards"
version = "0.0.4"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Rust library for playing cards and poker hand evaluation"
homepage = "https://github.com/Nydauron/playing-cards"
repository = "https://github.com/Nydauron/playing-cards"
readme = "README.md"
keywords = ["cards", "poker"]
categories = ["games", "simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", optional = true }
bincode = { version = "1.3.3", optional = true }
byteorder = "1.4.3"
funty = "2.0.0"
getrandom = "0.2.7"
itertools = { version = "0.10.3", optional = true }
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
once_cell = { version = "1.12.1", optional = true }
phf = { version = "0.11.2", features = ["macros"] }
rand = "0.8.5"
rand_core = "0.6.3"
rayon = "1.5.3"
serde = { version = "1.0.139", features = ["derive"] }
sfmt = "0.7.0"
strum = "0.24.1"
strum_macros = "0.24.0"

[build-dependencies]
bincode = "1.3.3"

[profile.dev.build-override]
opt-level = 3

[profile.release.build-override]
opt-level = 3

[package.metadata.docs.rs]
all-features = true

[features]
default = ["poker"]
unstable = []
poker = ["dep:bincode", "dep:async-std", "dep:once_cell", "dep:itertools"]
