[package]
name = "playing-cards"
version = "0.1.0-dev"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Rust library for playing cards and poker hand evaluation"
homepage = "https://github.com/Nydauron/playing-cards"
repository = "https://github.com/Nydauron/playing-cards"
readme = "README.md"
keywords = ["cards", "poker"]
categories = ["games", "simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
funty = "2.0.0"
getrandom = "0.2.7"
itertools = { version = "0.10.3", optional = true }
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
phf = { version = "0.11.2", features = ["macros"], optional = true }
rand = "0.8.5"
rand_core = "0.6.3"
rand_xoshiro = "0.6.0"
serde = { version = "1.0.139", features = ["derive"] }
strum = "0.24.1"
strum_macros = "0.24.0"

[dev-dependencies]
rayon = "1.5.3"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["poker"]
unstable = []
poker = ["dep:phf", "dep:itertools"]
